--- a/styles/products.css
+++ b/styles/products.css
@@ -59,7 +59,7 @@
     padding: clamp(1rem, 2vw, 2.5rem); 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
     position: absolute;
     inset: 0;
     z-index: 10;
